kitten/reported_bugs/rust/rust-80978/stderr.txt
error[E0573]: expected type, found local variable `arg`

  --> mutant.rs:25:75

   |

25 | let factorial = | recur : & mut dyn FnMut ( u32 ) -> u32 , arg : u32 | -> arg {

   |                                                                           ^^^ not a type



thread 'rustc' panicked at 'expected `NodeId` to be lowered already for res Local(

    NodeId(190),

)', compiler/rustc_ast_lowering/src/lib.rs:710:17

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.51.0-nightly (7a9b552cb 2021-01-12) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=no -Z polymorphize=no -C debuginfo=2 -C opt-level=2 --crate-type staticlib



query stack during panic:

end of query stack

error: aborting due to previous error



For more information about this error, try `rustc --explain E0573`.

